# optinspect

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml
docs/: conf.py  index.rst  interface.rst
optinspect/: __init__.py  accumulate.py  format_and_print.py  inspect.py  tag.py  trace.py  util.py
optinspect/tests/: conftest.py  test_accumulate.py  test_format_and_print.py  test_jit_and_scan.py  test_tag.py  test_trace.py  test_util.py
